*Empty MediaWiki Message*

--- a/Template:Main.mw
+++ b/Template:Main.mw
@@ -1,4 +1,4 @@
-:<div class="noprint">''Main article{{#if:{{{2|}}}|s}}&#58; [[{{{1}}}|{{{l1|{{{1}}}}}}]]{{#if:{{{2| }}}
+:<div class="noprint">''Pun bulung{{#if:{{{2|}}}|s}}&#58; [[{{{1}}}|{{{l1|{{{1}}}}}}]]{{#if:{{{2| }}}
   |{{#if:{{{3|}}}|,&#32;|&#32;and&#32;}}[[{{{2}}}|{{{l2|{{{2}}}}}}]]}}{{#if:{{{3|}}}
   |{{#if:{{{4|}}}|,&#32;|,&#32;and&#32;}}[[{{{3}}}|{{{l3|{{{3}}}}}}]]}}{{#if:{{{4|}}}
   |{{#if:{{{5|}}}|,&#32;|,&#32;and&#32;}}[[{{{4}}}|{{{l4|{{{4}}}}}}]]}}{{#if:{{{5|}}}
