([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Mapa de la provincia de Madrid siglo XVIII.jpg]] → [[File:Tomás López de Vargas Machuca (1773) Mapa de la provincia de Madrid.jpg]] [[c:COM:FR#reasons|File renaming criterion #2]]: To change from a me...

--- a/Madrid_(autonomous_community).mw
+++ b/Madrid_(autonomous_community).mw
@@ -29,7 +29,7 @@
 Ing '''Communidad ning Madrid''' ([[Spanish language|Spanish]]: ''Comunidad de Madrid'') metung ya kareng labing siam a [[autonomous communidad]] ning [[Espanya]]. Atiu king kalibudtaran ning bangsa, ing [[Iberian telapulu]], ampong  ''[[Meseta Kalibudtaran]]'' oo kaya ing Kalibudtaran Patag. Ing communidad misesepu la naman ning [[provinces of Spain|lalawigan]] ning [[Madrid]] at atiu karing tungku ning Espanya. nung nu iti mu rin ing tungku ning communidad. Ding kayang danggut ilapin deng keng mauli at aslagan ing [[Castile-La Mancha]] at king pangulu at albugan ing [[Castile ampong León]]. atin yang mga 6.2 yuta (2008) keraklan atiu la keng [[metropolitan a karinan ning Madrid]].<ref>[http://club.telepolis.com/geografo/regional/espa/madter.htm La economía de la Comunidad de Madrid, una de las más potentes y dinámicas del país]</ref> 
 
 [[File:Manzanares el Real- fachada del Castillo.jpg|thumb|left|250px|Ing [[Castiliu ning Manzanares]]]]
-[[File:Mapa de la provincia de Madrid siglo XVIII.jpg|thumb|Mapa ning Lalalwigan ning Madrid]]
+[[File:Tomás López de Vargas Machuca (1773) Mapa de la provincia de Madrid.jpg|thumb|Mapa ning Lalalwigan ning Madrid]]
 
 [[File:Mapa de la provincia de Madrid 1868.jpg|thumb|right|150px|Mapa ning lalawigan nign Madrid, melimbag inyang [[1868]]]]
 
