fix self closing tags as per [[:Category:Pages using invalid self-closed HTML tags]]

--- a/Omar_Khayyám.mw
+++ b/Omar_Khayyám.mw
@@ -18,8 +18,8 @@
 | death = [[1131 in poetry|1131]]
 | school_tradition =
 | main_interests =
-| influences = <small><br /><small/>
-| influenced = <small><br /><small/>
+| influences = <small><br /></small>
+| influenced = <small><br /></small>
 | notable_ideas =
 }}
 
