*Empty MediaWiki Message*

--- a/Ha_Seok-jin.mw
+++ b/Ha_Seok-jin.mw
@@ -1,6 +1,6 @@
 {{Korean name|Ha}}
 [[File:TvN '연극이 끝나고 난 뒤' 제작발표회 - 하석진 & 비투비 이민혁의 말말말! 22.jpg|right|thumb|Ha Seok-jin]]
-I '''Ha Seok-jin''' ([[Hangul]]: 조정석, [[Hanja]]: 曺政奭; mibait Marsu 5, 1982), metung yang artista ampo modelu king [[Mauling Korea]]. Mas mekilala ya kareng papel na king [[Drinking Solo]] at [[1% of Anything]].
+I '''Ha Seok-jin''' ([[Hangul]]: 조정석, [[Hanja]]: 河錫辰; mibait Marsu 5, 1982), metung yang artista ampo modelu king [[Mauling Korea]]. Mas mekilala ya kareng papel na king [[Drinking Solo]] at [[1% of Anything]].
 
 ==Kawing Palwal==
 {{Commonscat|Ha Seok-jin}}
