--- a/Bram_Cohen.mw
+++ b/Bram_Cohen.mw
@@ -1,5 +1,5 @@
 {{Infobox Person
-| image = Bram-cohen-codecon-2006.jpg <!-- Only freely-licensed images may be used to depict living people.  See [[WP:NONFREE]].  -->
+| image = Bram Cohen.jpg <!-- Only freely-licensed images may be used to depict living people.  See [[WP:NONFREE]].  -->
 | image_size = 150px |
 | name        = Bram Cohen
 | caption     = 
