*Empty MediaWiki Message*

--- a/David_Baszucki.mw
+++ b/David_Baszucki.mw
@@ -1,4 +1,1 @@
-My bussiness is Private
-
-
-David Baszuki
+To subscribe to David Baszuki Youtube Click The Link [https://www.youtube.com/channel/UCfRkKqGm6EFGLh41vsfGKCQ David Baszuki Youtube]
