*Empty MediaWiki Message*

--- a/AMA_Computer_University.mw
+++ b/AMA_Computer_University.mw
@@ -1,6 +1,6 @@
 {{Infobox_University
 |name             = [[File:AMA Computer University text logo.png|245px]]
-|image            = [[image:amacus.jpg]]
+|image            = [[File:amacus.jpg]]
 |motto            = "Never rest on one's laurels" (E ka makukuntentu kareng tagumpe mung milabas)
 |established      = [[October 15]], [[1980]]
 |type             = [[Private university|Privadu]]
@@ -22,42 +22,43 @@
 }}
 {{Coor title dms|14|39|53.46|N|121|0|47.63|E|type:landmark}}
 
-Ing '''AMA Computer University''' (AMACU) metung yang universidad a mayayakit king  Project 8, [[Quezon Lakanbalen]], [[Filipinas]]. Makatutuk ya kareng tecnologiang electronico, pang-informaciun ampong comunicaciun. Metung ya kareng marca o brand ning AMA Education Group. Gagamit yang calendariung trimestral, nung nu maliari yang ayari ing karaniwang apat a banuang cursu kilub ning atlung banwa at atlung bulan.
+Ing '''AMA Computer University''' (AMACU) metung yang universidad a mayayakit king Project 8, [[Quezon Lakanbalen]], [[Filipinas]]. Makatutuk ya kareng tecnologiang electronico, pang-informaciun ampong comunicaciun. Metung ya kareng marca o brand ning AMA Education Group. Gagamit yang calendariung trimestral, nung nu maliari yang ayari ing karaniwang apat a banuang cursu kilub ning atlung banwa at atlung bulan.
 
 Tuturing deng metung kareng mabilis diling dagul kareng pipagaralan king Filipinas ing AMA Education Group. Banua-banua, atlu la anggang apat a libu (3000-4000) deng mayayari. Nanupata, ditak lang dili deng tatagun kareng alumni homecoming (pamagbalik da reng miyari) at aliwa pang actividad king kilual ning pamagaral.
 
-==Kasalesayan==
-===AMA Institute===
-I Dr. Amable R. Aguiluz V ing mitátag king AMA Computer University. Pekilagyu ne king kayang tata, i Amable M. Aguiluz, Sr. Pengaku nang Dr. Aguiluz a mituru yang tungkul kareng computer agpang king kayang karanasan king pamamisaling computer. Tetag neng Aguiluz ing AMA Institute of Computer Studies king Shaw Boulevard kanitang [[October 20]], [[1980]]. Kanita, maki ampang yang mangakuyad a cursu king  Electronic Data Processing Fundamentals, Basic Programming, and Technology Career ing kayang pipagaralan. Labi la mung atlu (13) deng magaral a migpalista anyang mumuna nang semestri niti. 
+== Kasalesayan ==
+=== AMA Institute ===
+I Dr. Amable R. Aguiluz V ing mitátag king AMA Computer University. Pekilagyu ne king kayang tata, i Amable M. Aguiluz, Sr. Pengaku nang Dr. Aguiluz a mituru yang tungkul kareng computer agpang king kayang karanasan king pamamisaling computer. Tetag neng Aguiluz ing AMA Institute of Computer Studies king Shaw Boulevard kanitang [[October 20]], [[1980]]. Kanita, maki ampang yang mangakuyad a cursu king Electronic Data Processing Fundamentals, Basic Programming, and Technology Career ing kayang pipagaralan. Labi la mung atlu (13) deng magaral a migpalista anyang mumuna nang semestri niti.
 
-===Ing AMA Computer College, deng kayang sanga, at kayugneng pipagaralan===
-[[Image:Amacu.jpg|215px|thumb|Ing palub king universidad king Quezon Lakanbalen]]
-Migumpisa ya ing AMA Computer College kanitang June 1981. Mekaba ya itang kayang pamagaral bang maging apat a banwang cursung [[Bachelor of Science]]  king [[Computer Science]]. Manibat king ditak mung magaral kanitang mumuna nang banwa, biglang mitas ing bilang da reng estudianti, king 600 kanitang 1983, at 2,000 kanitang 1985 ketang mumuna nang campus king [[Makati Lakanbalen]]. E miglwat, mitikdo ya ing centru nang campus king [[Quezon Lakanbalen]]. Adwa lang campus king provincia deng mitatag: detang king  [[Cebu City|Cebu]] at [[Silicon Gulf]], [[Davao]].
+=== Ing AMA Computer College, deng kayang sanga, at kayugneng pipagaralan ===
+[[File:Amacu.jpg|215px|thumb|Ing palub king universidad king Quezon Lakanbalen]]
+Migumpisa ya ing AMA Computer College kanitang June 1981. Mekaba ya itang kayang pamagaral bang maging apat a banwang cursung [[Bachelor of Science]] king [[Computer Science]]. Manibat king ditak mung magaral kanitang mumuna nang banwa, biglang mitas ing bilang da reng estudianti, king 600 kanitang 1983, at 2,000 kanitang 1985 ketang mumuna nang campus king [[Makati Lakanbalen]]. E miglwat, mitikdo ya ing centru nang campus king [[Quezon Lakanbalen]]. Adwa lang campus king provincia deng mitatag: detang king [[Cebu City|Cebu]] at [[Silicon Gulf]], [[Davao]].
 
-Anyang mipasar ya ing Philippine [[w:Higher Education Act]] ning 1994, midayu ing upaya ning kapamahalan a pigilan ing bayad kareng privadung pipagaralan. Alutas ning AMA ing prublema ning ditak a magaral kapamilatan ning agresivung campania ning pamamisali, patalastas (advertising) at pamamalita/informaciun. Uli na ning kaparalanan a iti, migumpisa lang dagul deng escuela. 
+Anyang mipasar ya ing Philippine [[w:Higher Education Act]] ning 1994, midayu ing upaya ning kapamahalan a pigilan ing bayad kareng privadung pipagaralan. Alutas ning AMA ing prublema ning ditak a magaral kapamilatan ning agresivung campania ning pamamisali, patalastas (advertising) at pamamalita/informaciun. Uli na ning kaparalanan a iti, migumpisa lang dagul deng escuela.
 
 Kaybat nang linto ning AMACC, mitatag ya murin ing AMA Computer Learning Center (ACLC) kanitang 1986, at ing AMA Telecommunication & Electronic Learning Center kanitang 1996. Ing mumuna, maki ampang yang mangakuyad a cursu para kareng profesional, at adwang banwang cursung tecnical o vocational para kareng bisang makapagobra. Ita namang kadwa, metung ya kareng mumunang pipagaralan king Filipinas a makatutuk king telecommunications, electronics at aliwang tecnologiang maki kaugnayan kareti.
 
 Metung kareng principiu ning AMA ing maging mumunang makagawa king sanumang bage. Iti ing mumunang piparagalan king Filipinas a lubusan yang ilub ing Internet o Aptas king kareng kayang cursu. Mika serviciu lang Internet deng eganagana nang campus. Manibat kanitang 1987, tuglung-tuglung no ngan deng mangaragul a campus ning AMA kapamilatan ning metung a [[w:local area network]] (LAN). Uli na niti, anti la mong meging metung a pipagaralan king mabilug a bangsa. Ing AMA murin ing mumunang pipagaralan a migtagumpeng mangipalyaring [[w:teleconference]] pilatan da reng kayang magaral matas a pipagaralan (high school) ampo retang king metung a high school mu naman king Canada kanitang 1994.
 
-Kanitang 1991, ikwa nang Aguiluz a kilalanan (accredit) ne ning American League of Colleges and Universities (ALOCU) ing AMA Computer College, anya ing AMA ing meging mumunang pipagaralan a Filipinu at e Americanu a mirinan anti kaniting dangalan. Migit pa kaniti, megi yang oficial a kayanib ing AMACC king [[w:John F. Kennedy]] Educational Institute king Japan. Kikilalanan ne murin ning AMACC ning  [[w:National Computer Center]] king [[w:United Kingdom]].
+Kanitang 1991, ikwa nang Aguiluz a kilalanan (accredit) ne ning American League of Colleges and Universities (ALOCU) ing AMA Computer College, anya ing AMA ing meging mumunang pipagaralan a Filipinu at e Americanu a mirinan anti kaniting dangalan. Migit pa kaniti, megi yang oficial a kayanib ing AMACC king [[w:John F. Kennedy]] Educational Institute king Japan. Kikilalanan ne murin ning AMACC ning [[w:National Computer Center]] king [[w:United Kingdom]].
 
-===Pamangawang Universidad===
+=== Pamangawang Universidad ===
  
-Dininan neng certificaciun ning [[SGS]] o [[Société Générale de Surveillance]] International Certification Services Canada, Inc. 
+Dininan neng certificaciun ning [[SGS]] o [[Société Générale de Surveillance]] International Certification Services Canada, Inc.
 ning AMA Computer College kanitang Marzo 1999.
 
-Ing buri nang sabyan niti, mesuri ne at merehistru ing quality Management System o kaparalanan ning pamanibala king calidad ning AMACC, at mipasar ya kareng pamangaylangan ning [[ISO 9001]]. Kaylangan yang mantinian o panatilian ing certificaciun ning ISO. Lalon de reng talasuri (assessor) balang kanam a bulan.  
+Ing buri nang sabyan niti, mesuri ne at merehistru ing quality Management System o kaparalanan ning pamanibala king calidad ning AMACC, at mipasar ya kareng pamangaylangan ning [[ISO 9001]]. Kaylangan yang mantinian o panatilian ing certificaciun ning ISO. Lalon de reng talasuri (assessor) balang kanam a bulan.
 
-Mirinan yang kabilyan a universidad ing AMACC king Quezon Lakanbalen kanitang Agosto 20, 2001. Ing AMACC Quezon City megi yang  AMA Computer University. 
+Mirinan yang kabilyan a universidad ing AMACC king Quezon Lakanbalen kanitang Agosto 20, 2001. Ing AMACC Quezon City megi yang AMA Computer University.
 
-Kanitang 2004, mika kasundwan ya ing AMA Computer University ampo ing ''iCarnegie'' ning [[Carnegie Mellon University]] ba yang gamitan ing kayang curriculum ampong cursu kapamilatan ning e-learning. Agpang king Pamuntuk ning iCarnegie at ning CEO a i Allan Fisher,  "the academic relationship between STI and iCarnegie went well, the business side of the agreement did not go as planned". ("Masalese ing daneng pangpamagarala, dapot e melaus ing itang maki kaugnayan king negociu") <ref>http://www.inq7.net/inf/2003/may/15/inf_1-1.htm</ref>
+Kanitang 2004, mika kasundwan ya ing AMA Computer University ampo ing ''iCarnegie'' ning [[Carnegie Mellon University]] ba yang gamitan ing kayang curriculum ampong cursu kapamilatan ning e-learning. Agpang king Pamuntuk ning iCarnegie at ning CEO a i Allan Fisher, "the academic relationship between STI and iCarnegie went well, the business side of the agreement did not go as planned". ("Masalese ing daneng pangpamagarala, dapot e melaus ing itang maki kaugnayan king negociu") <ref>http://www.inq7.net/inf/2003/may/15/inf_1-1.htm</ref>
 
-===Deng Aliwang Campus ning AMA Computer College===
+=== Deng Aliwang Campus ning AMA Computer College ===
 
-E no pepaintulutan ning [[w:Commission on Higher Education]] ([[w:CHED]]) deng aliwang campus ning AMA a gamitan de ing titulung “[[w:University]]”, at “[[w:College]]” mu o “[[w:Institute]]” ing malyari dang gamitan uling e ra pa ayabut ing adwan na niting agenciang manibala king pamagaral. 
+E no pepaintulutan ning [[w:Commission on Higher Education]] ([[w:CHED]]) deng aliwang campus ning AMA a gamitan de ing titulung “[[w:University]]”, at “[[w:College]]” mu o “[[w:Institute]]” ing malyari dang gamitan uling e ra pa ayabut ing adwan na niting agenciang manibala king pamagaral.
 
-Ketang 2003, mekipagkasundu ya ing AMA king kapamahalan ning emirate ning  [[Bahrain]] ba yang itatag ing  [[AMA International University]] king [[Manama]]. 
+Ketang 2003, mekipagkasundu ya ing AMA king kapamahalan ning emirate ning [[Bahrain]] ba yang itatag ing [[AMA International University]] king [[Manama]].
 
 Atin yang dinalan limampulung libung (150,000) magaral ing AMA Educational Group. Adwa lang dalan (200) deng kayang campus king Filipinas at aliwa pang dake ning yatu.
+
 [[Category:Ding Universidad at Colegiu king Filipinas]]
