*Empty MediaWiki Message*

--- a/Abba_Eban.mw
+++ b/Abba_Eban.mw
@@ -14,34 +14,34 @@ Gov't roles = [[Deputy leaders of Israel#Deputy Prime Minister|Deputy Prime Mini
 }}
 
 [[File:Israel UN delegation 1950.jpg|280px|thumb|Israel delegation to the UN: (l-r) A. Lourie, consul general; Dr. J. Robinson, counsellor; A. Eban, envoy extraordinary; Dr. [[Avraham Katznelson]], Minister of Health; G. Rafael, Foreign Affairs (1950)]]
-[[Image:Truman-bengurion.jpg|280px|thumb|Abba Eban (center) with Israeli PM [[David Ben-Gurion]] and U.S. President [[Harry S Truman|Harry Truman]] (1951)]]
+[[File:Truman-bengurion.jpg|280px|thumb|Abba Eban (center) with Israeli PM [[David Ben-Gurion]] and U.S. President [[Harry S Truman|Harry Truman]] (1951)]]
 [[File:Truman receives menorah.jpg|thumb|right|Israeli PM [[David Ben-Gurion]] (center) giving a [[Hanukkah]] [[Menorah (Hanukkah)|Menorah]] as a gift to U.S. President Truman in the [[Oval Office]]. At right is Abba Eban, the Ambassador of Israel to the U.S. (1951)]]
 
 I '''Abba Eban''' ({{lang-he|אבא אבן}}, mibait '''Abba Solomon Meir'''; kaybat kinwa ne ing lagyung '''Aubrey Solomon Eban'''; 2 Febrero 1915 – 17 Noviembre 2002) metung yang diplomatiko ampong politikung [[Israel]]i.
 
 King kayang karera, megi yang [[Ministeryong Panglwal ning Israel|Ministrung Panglwal]], [[Ministeryo ning Edukasyon (Israel)|Ministru ning Edukasyon]], [[Deputy leaders of Israel|Kadwang Pun Ministru]], ampong [[List of Israeli ambassadors to the United States|embahador king Estados Unidos]] ampong [[Permanenting Representate ning Israel kareng Misasanmetung a Bangsa|kareng Misasanmetung a Bangsa]] (United Nations). Megi ya muring Kadwang Pamuntuk ning [[Pangkabilugang Kapulungan da reng Misasanmetung a Bangsa]] (United Nations General Assembly) ampong Pamuntuk ning [[Weizmann Institute of Science]].
 
-==Dalerayan==
+== Dalerayan ==
 {{reflist|30em}}
 
-==Pikwanan==
-*''The Commentator''; "In Memoriam"; Volume '''67''', Issue 5; 25 November 2002
-*[http://www.jafi.org.il/education/100/people/BIOS/eban.html Biography] at The Department for Jewish Zionist Education
+== Pikwanan ==
+* ''The Commentator''; "In Memoriam"; Volume '''67''', Issue 5; 25 November 2002
+* [http://www.jafi.org.il/education/100/people/BIOS/eban.html Biography] at The Department for Jewish Zionist Education
 
-==Suglung palwal==
+== Suglung palwal ==
 {{Wikiquote}}
-*[http://www.jewishagency.org/JewishAgency/English/Jewish+Education/Compelling+Content/Eye+on+Israel/Gallery+of+People+%28Biographies%29/Abba+Eban.htm Abba Eban profile]
-*[http://truman.huji.ac.il/units.asp?cat=53&in=0 Abba Eban Centre for Israeli Diplomacy] (Part of the Harry S. Truman Institute for the Advancement of Peace)
-*{{MKlink|id=236}}
-*[http://www.thespeeches.com/   A Collection of Abba Eban's speeches (and others)]
-*[https://archive.is/20121218175832/www.mfa.gov.il/MFA/MFAArchive/2000_2009/2002/11/Abba%20Eban Israeli Ministry of Foreign Affairs] (Biography and Selected Speeches)
+* [http://www.jewishagency.org/JewishAgency/English/Jewish+Education/Compelling+Content/Eye+on+Israel/Gallery+of+People+%28Biographies%29/Abba+Eban.htm Abba Eban profile]
+* [http://truman.huji.ac.il/units.asp?cat=53&in=0 Abba Eban Centre for Israeli Diplomacy] (Part of the Harry S. Truman Institute for the Advancement of Peace)
+* {{MKlink|id=236}}
+* [http://www.thespeeches.com/ A Collection of Abba Eban's speeches (and others)]
+* [https://archive.is/20121218175832/www.mfa.gov.il/MFA/MFAArchive/2000_2009/2002/11/Abba%20Eban Israeli Ministry of Foreign Affairs] (Biography and Selected Speeches)
 * {{Internet Archive film clip|id=gov.archives.arc.95992|description="Longines Chronoscope with Abba Eban"}}
 * {{Internet Archive film clip|id=gov.archives.arc.95948|description="Longines Chronoscope with Abba Eban"}}
 
-==Lon la murin==
-*[[List of Israel Prize recipients]]
+== Lon la murin ==
+* [[List of Israel Prize recipients]]
 
-{{s-start}} 
+{{s-start}}
 {{s-dip}}
 {{succession box | title=[[Israel Ambassador to the United Nations|Israeli Ambassador to the UN]] | before=First | years=1949–59| after=[[Michael Comay]]}}
 {{s-end}}
