Removing [[:c:File:Coat_of_arms_of_South_Africa.svg|Coat_of_arms_of_South_Africa.svg]], it has been deleted from Commons by [[:c:User:Taivo|Taivo]] because: File is corrupt, empty, or in a [[:c:COM:FT|disallowed format]]: empty.

--- a/Mauling_Aprika.mw
+++ b/Mauling_Aprika.mw
@@ -3,7 +3,7 @@
 |native_name = Republika ning Mauling Aprika
 |common_name = Mauling Aprika
 |image_flag = Flag of South Africa.svg
-|image_coat = Coat of arms of South Africa.svg
+|image_coat =
 |symbol_type = Coat of arms
 |image_map = LocationSouthAfrica.png
 |national_motto = [[ǀXam language|ǀXam]]: ''!ke e: {{IPA|ǀ}}xarra {{IPA|ǁ}}ke''<br />([[English language|English]]: "Unity In Diversity" or literally, "Diverse People Unite")
