--- a/Template:France_Regions_Labelled_Map.mw
+++ b/Template:France_Regions_Labelled_Map.mw
@@ -1,40 +1,34 @@
-{{Image label begin|image=France template.png|width={{{width|400}}}|float={{{float|none}}}}} 
-{{Image label small|x=0.4875|y=0.06|scale={{{width|400}}}|text=[[Nord-Pas de Calais|Nord-Pas <br/>de Calais]]}}
-{{Image label small|x=0.5225|y=0.165|scale={{{width|400}}}|text=[[Picardie]]}}
-{{Image label small|x=0.395|y=0.16|scale={{{width|400}}}|text=[[Haute-Normandie|Haute-<br/>Normandie]]}}
-{{Image label small|x=0.4925|y=0.2375|scale={{{width|400}}}|text=[[Île-de-France (region)|Île-de-<br/>France]]}}
-{{Image label small|x=0.605|y=0.28|scale={{{width|400}}}|text=[[Champagne-Ardenne|Champagne-<br/>Ardenne]]}}
-{{Image label small|x=0.74|y=0.255|scale={{{width|400}}}|text=[[Lorraine (region)|Lorraine]]}}
-{{Image label small|x=0.86|y=0.2725|scale={{{width|400}}}|text=[[Alsace]]}}
-{{Image label small|x=0.74|y=0.3825|scale={{{width|400}}}|text=[[Franche-Comté|Franche-<br/>Comté]]}}
-{{Image label small|x=0.58|y=0.38|scale={{{width|400}}}|text=[[Bourgogne]]}}
-{{Image label small|x=0.44|y=0.365|scale={{{width|400}}}|text=[[Centre (France)|Centre]]}}
-{{Image label small|x=0.255|y=0.39|scale={{{width|400}}}|text=[[Pays-de-la-Loire|Pays-de-la-<br/>Loire]]}}
-{{Image label small|x=0.105|y=0.3|scale={{{width|400}}}|text=[[Bretagne|Bretagne<br/>(Brittany)]]}}
-{{Image label small|x=0.2775|y=0.22|scale={{{width|400}}}|text=[[Basse-Normandie|Basse-<br/>Normandie]]}}
-{{Image label small|x=0.305|y=0.52|scale={{{width|400}}}|text=[[Poitou-Charentes|Poitou-<br/>Charentes]]}}
-{{Image label small|x=0.44|y=0.5275|scale={{{width|400}}}|text=[[Limousin (region)|Limousin]]}}
-{{Image label small|x=0.535|y=0.6|scale={{{width|400}}}|text=[[Auvergne (region)|Auvergne]]}}
-{{Image label small|x=0.69|y=0.5425|scale={{{width|400}}}|text=[[Rhône-Alpes|Rhône-<br/>Alpes]]}}
-{{Image label small|x=0.3075|y=0.66|scale={{{width|400}}}|text=[[Aquitaine]]}}
-{{Image label small|x=0.4025|y=0.7325|scale={{{width|400}}}|text=[[Midi-Pyrénées]]}}
-{{Image label small|x=0.5|y=0.79|scale={{{width|400}}}|text=[[Languedoc-Roussillon|Languedoc-<br/>Roussillon]]}}
-{{Image label small|x=0.705|y=0.7225|scale={{{width|400}}}|text=[[Provence-Alpes-Côte d'Azur|Provence-Alpes-<br/>Côte d'Azur]]}}
-{{Image label small|x=0.9475|y=0.8675|scale={{{width|400}}}|text=[[Corsica]]}}
-{{Image label small|x=0.61|y=0.055|scale={{{width|400}}}|text=''[[Belgium|<span style="color: #48A3B5;">Belgium</span>]]''}}
-{{Image label small|x=0.735|y=0.1425|scale={{{width|400}}}|text=''[[Luxembourg|<span style="color: #48A3B5;">Luxembourg</span>]]''}}
-{{Image label small|x=0.8525|y=0.1825|scale={{{width|400}}}|text=''[[Germany|<span style="color: #48A3B5;">Germany</span>]]''}}
-{{Image label small|x=0.8175|y=0.4525|scale={{{width|400}}}|text=''[[Switzerland|<span style="color: #48A3B5;">Switzerland</span>]]''}}
-{{Image label small|x=0.8425|y=0.6225|scale={{{width|400}}}|text=''[[Italy|<span style="color: #48A3B5;">Italy</span>]]''}}
-{{Image label small|x=0.145|y=0.115|scale={{{width|400}}}|text=''[[English Channel|<span style="color: #48A3B5;">English Channel</span>]]''}}
-{{Image label small|x=0.08|y=0.0175|scale={{{width|400}}}|text=''[[United Kingdom|<span style="color: #48A3B5;">United Kingdom</span>]]''}}
-{{Image label small|x=0.1225|y=0.545|scale={{{width|400}}}|text=''[[Bay of Biscay|<span style="color: #48A3B5;">Bay of<br/>Biscay</span>]]''}}
-{{Image label small|x=0.455|y=0.86|scale={{{width|400}}}|text=''[[Andorra|<span style="color: #48A3B5;">Andorra</span>]]''}}
+{{Image label begin|image=France 18 regions.png|width={{{width|400}}}|float={{{float|none}}}}} 
+{{Image label small|x=0.54|y=0.12|scale={{{width|400}}}|text =[[Hauts-de-France|Hauts-<br>de-<br>France]]}}
+{{Image label small|x=0.35|y=0.225|scale={{{width|400}}}| text= [[Normandie (région administrative)|Normandie]]}}
+{{Image label small|x=0.525|y=0.2375|scale={{{width|400}}}|text =[[Île-de-France|Île-de-<br>France]]}}
+{{Image label small|x=0.69|y=0.26|scale={{{width|400}}}| text= [[Grand Est]]}}
+{{Image label small|x=0.62|y=0.37|scale={{{width|400}}}|text=[[Bourgogne-Franche-Comté|Bourgogne-<br>Franche-Comté]]}}
+{{Image label small|x=0.44|y=0.35|scale={{{width|400}}}|text=[[Centre-Val de Loire|Centre-<br>Val de Loire]]}}
+{{Image label small|x=0.29|y=0.349|scale={{{width|400}}}|text =[[Pays de la Loire|Pays<br>de la Loire]]}}
+{{Image label small|x=0.19|y=0.30|scale={{{width|400}}}|text =[[Région Bretagne|Bretagne]]}}
+{{Image label small|x=0.39|y=0.54|scale={{{width|400}}}|text =[[Nouvelle-Aquitaine|Nouvelle-<br />Aquitaine]]}}
+{{Image label small|x=0.62|y=0.52|scale={{{width|400}}}|text=[[Auvergne-Rhône-Alpes|Auvergne-<br>Rhône-Alpes]]}}
+{{Image label small|x=0.49|y=0.69|scale={{{width|400}}}|text =[[Occitanie (région administrative)|Occitanie]]}}
+{{Image label small|x=0.71|y=0.65|scale={{{width|400}}}|text=[[Provence-Alpes-Côte d'Azur|Provence-<br>Alpes-<br>Côte d'Azur]]}}
+{{Image label small|x=0.93| y=0.83| scale={{{width|400}}}|text=[[Corsica]]}}
+
+{{Image label small|x=0.11|y=0.67|scale={{{width|400}}}|text=[[French Guiana|Guyane]]}}
+{{Image label small|x=0.02|y=0.29|scale={{{width|400}}}|text=[[Guadeloupe]]}}
+{{Image label small|x=0.02|y=0.39|scale={{{width|400}}}|text=[[Martinique]]}}
+{{Image label small|x=0.66|y=0.90|scale={{{width|400}}}|text=[[Mayotte]]}}
+{{Image label small|x=0.76|y=0.91|scale={{{width|400}}}|text=[[Réunion]]}}
+
+{{Image label small|x=0.61|y=0.055|scale={{{width|400}}}|text=''[[Belgika|<span style="color: #48A3B5;">Belgika</span>]]''}}
+{{Image label small|x=0.735|y=0.1425|scale={{{width|400}}}|text=''[[Luxemburgo|<span style="color: #48A3B5;">Luxemburgo</span>]]''}}
+{{Image label small|x=0.8525|y=0.1825|scale={{{width|400}}}|text=''[[Alemanya|<span style="color: #48A3B5;">Alemanya</span>]]''}}
+{{Image label small|x=0.8175|y=0.4525|scale={{{width|400}}}|text=''[[Suiza|<span style="color: #48A3B5;">Suiza</span>]]''}}
+{{Image label small|x=0.8425|y=0.6225|scale={{{width|400}}}|text=''[[Italya|<span style="color: #48A3B5;">Italya</span>]]''}}
+{{Image label small|x=0.2|y=0.15|scale={{{width|400}}}|text=''[[English Channel|<span style="color: #48A3B5;">English Channel</span>]]''}}
+{{Image label small|x=0.25|y=0.02|scale={{{width|400}}}|text=''[[Pisanmetung a Ka-arian|<span style="color: #48A3B5;">Pisanmetung a Ka-arian</span>]]''}}
+{{Image label small|x=0.1225|y=0.46|scale={{{width|400}}}|text=''[[Bay of Biscay|<span style="color: #48A3B5;">Bay of<br/>Biscay</span>]]''}}
+{{Image label small|x=0.48|y=0.78|scale={{{width|400}}}|text=''[[Andorra|<span style="color: #48A3B5;">Andorra</span>]]''}}
 {{Image label small|x=0.285|y=0.855|scale={{{width|400}}}|text=''[[Spain|<span style="color: #48A3B5;">Spain</span>]]''}}
-{{Image label small|x=0.9|y=0.7575|scale={{{width|400}}}|text=''[[Ligurian Sea|<span style="color: #48A3B5;">Ligurian<br/>Sea</span>]]''}}
-{{Image label small|x=0.675|y=0.855|scale={{{width|400}}}|text=''[[Mediterranean Sea|<span style="color: #48A3B5;">Mediterranean<br/>Sea</span>]]''}}
-{{Image label small|x=0.795|y=0.01|scale={{{width|400}}}|text=[[French Guiana|Guyane]]}}
-{{Image label small|x=0.955|y=0.0375|scale={{{width|400}}}|text=[[Guadeloupe]]}}
-{{Image label small|x=0.955|y=0.06|scale={{{width|400}}}|text=[[Martinique]]}}
-{{Image label small|x=0.955|y=0.085|scale={{{width|400}}}|text=[[Réunion]]}}
+{{Image label small|x=0.9|y=0.68|scale={{{width|400}}}|text=''[[Ligurian Sea|<span style="color: #48A3B5;">Ligurian<br/>Sea</span>]]''}}
+{{Image label small|x=0.675|y=0.68|scale={{{width|400}}}|text=''[[Mediterranean Sea|<span style="color: #48A3B5;">Mediterranean<br/>Sea</span>]]''}}
 {{Image label end}}<noinclude>{{User:Zondor/Labelled Map Documentation}}</noinclude>
