{{superseded|Find A Grave logo.png}}

--- a/Find_a_Grave.mw
+++ b/Find_a_Grave.mw
@@ -1,5 +1,5 @@
 {{Infobox Website
-| logo = [[File:Find A Grave logo.gif|200px]]
+| logo = [[File:Find A Grave logo.png|200px]]
 | screenshot = [[File:buryicon.jpg|200px]]
 | name = Find A Grave
 | origin =
