--- a/Template:Country_data_South_Africa.mw
+++ b/Template:Country_data_South_Africa.mw
@@ -10,7 +10,7 @@
 | flag alias-naval-1922 = Naval Ensign of the United Kingdom.svg
 | flag alias-naval-1946 = Naval ensign of South Africa (1946-1951).svg
 | flag alias-naval-1952 = Naval Ensign of South Africa (1952-1981)-2.svg
-| flag alias-naval-1981 = Naval Ensign of South Africa (1981-1994).png
+| flag alias-naval-1981 = Naval Ensign of South Africa (1981-1994).svg
 | link alias-naval = South African Navy
 | flag alias-air force = Ensign of the South African Air Force.svg
 | link alias-air force = South African Air Force
