Removing [[:c:File:FAIAENG_ICON.svg|FAIAENG_ICON.svg]], it has been deleted from Commons by [[:c:User:Jcb|Jcb]] because: Missing source as of 8 March 2017 -  Using [[:c:COM:VFC|VisualFileChange]]..

--- a/Kaifeng.mw
+++ b/Kaifeng.mw
@@ -15,7 +15,7 @@
 |image_caption          = Babo:Bista ning Palasyu ning Xuande neng bengi king Millennium City Park, Lalam, babong kayli:Toring Pasbul Dalan (''Gate Tower'') ampong Sidwang Pangkapamahalan ning Kaifeng (''Kaifeng Government Hall''), Lalam, mababang kayli:Iron Pagoda (''Iron Pagoda '') ampo ing Laug ning Tieta (''Tieta Lake''), Lalam, wanan:Istatwa nang Zhang Zeduan king Kaifeng Millennium City Park 
 |image_flag             = Flag of the City of Kaifeng.svg
 |flag_size              =
-|image_seal             = FAIAENG ICON.svg
+|image_seal             =
 |seal_size              = 100px
 |image_shield           =
 |shield_size            =
