*Empty MediaWiki Message*

--- a/FC_Barcelona.mw
+++ b/FC_Barcelona.mw
@@ -18,14 +18,14 @@
 | current = 2011–12 FC Barcelona season
 | website = http://www.fcbarcelona.com
 <!-- DO NOT ADD OR REVERT INTO EARLIER VERSIONS: THE NIKE LOGO IS COPYRIGHTED AND MAY NOT BE USED-->
-| pattern_la1= _thinblackborder|pattern_b1=_fcbarcelona1112H|pattern_ra1=_thinblackborder
-| pattern_sh1=_fcbarcelona1112h|pattern_so1=_fcbarcelona1112h
-| leftarm1=0000BF|body1=0000BF|rightarm1=0000BF|shorts1=0000BF|socks1=0000BF
-| pattern_la2= _thinblackborder|pattern_b2=|pattern_ra2=_thinblackborder
-| pattern_sh2=_fcbarcelona1112a|pattern_so2=_fcbarcelona1112a
-| leftarm2=000000|body2=000000|rightarm2=000000|shorts2=000000|socks2=000000
-| pattern_la3= _thinblackborder|pattern_b3=_FCBarcelona1011A|pattern_ra3=_thinblackborder
-| pattern_sh3=_fcbarcelona1011a|pattern_so3=_fcbarcelona1011a
+| pattern_la1= |pattern_b1=_2redstripes2|pattern_ra1=
+| pattern_sh1=|pattern_so1=
+| leftarm1=0022CC|body1=0022CC|rightarm1=0022CC|shorts1=0022CC|socks1=0022CC
+| pattern_la2= _navyborder|pattern_b2=_collarnavy|pattern_ra2=_navyborder
+| pattern_sh2=|pattern_so2=
+| leftarm2=FFBF00|body2=FFBF00|rightarm2=FFBF00|shorts2=111140|socks2=FFBF00
+| pattern_la3= _thinblackborder|pattern_b3=|pattern_ra3=_thinblackborder
+| pattern_sh3=|pattern_so3=
 | leftarm3=78E7CB|body3=78E7CB|rightarm3=78E7CB|shorts3=78E7CB|socks3=78E7CB
 }}
 Ing '''Futbol Club Barcelona''' ({{IPA-ca|fubˈbɔɫ ˈkɫub bərsəˈɫonə|-|Futbol Club Barcelona - name.ogg}}), a ausan da muring '''Barcelona''' at antimong palayo, '''Barça''',<ref>Pronounced {{IPA-ca|ˈbar.sə|}}.</ref> metung yang propesional a [[Football team|football club]], a makabasi king [[Barcelona]], [[Catalonia]], [[Espania]].
